--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 			<artifactId>plaid-java</artifactId>
 			<version>4.0.2</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>io.github.bonigarcia</groupId>
+		    <artifactId>webdrivermanager</artifactId>
+		    <version>4.4.0</version>
+		</dependency>
 
 	</dependencies>
 </project>
